# trm_sequence

./: .gitignore  README.md  fineweb_test.py  multirun.sh  pyproject.toml  test.py  test_fineweb.py  test_ts.py
config/: config.yaml  dllm.yaml  fineweb.yaml  lctm_ts.yaml  trm_ar.yaml  trm_ar_fineweb.yaml  trm_ar_ripple.yaml  trm_dllm.yaml
config/data/: dllm.yaml  standard_module.yaml  trdlm.yaml
config/learning/: standard.yaml
config/loss/: dllm.yaml  lctm.yaml  mnist.yaml  trm.yaml  trm_ar.yaml  trm_dllm.yaml
config/model/: dllm.yaml  fcn.yaml  fineweb.yaml  lctm.yaml  trm.yaml  trm_ar.yaml  trm_ar_fineweb.yaml  trm_ar_ripple.yaml  trm_dllm.yaml
config/module/: autoregressor.yaml  dllm.yaml  mnist_cls.yaml  trm_ar.yaml  trm_cls.yaml  trm_dllm.yaml
config/optimizer/: adamw_standard.yaml
config/scheduler/: none.yaml  one_cycle_lr.yaml
loaders/: __init__.py  base.py  data_modules.py  datasets.py
loaders/datasets/: __init__.py  fineweb.py  mnist.py  ts.py
loss/: aggregators.py  components.py
loss/components/: __init__.py  base.py  llm.py  trdlm.py
models/: __init__.py  base.py  models.py  modules.py
models/models/: __init__.py  ctm.py  trm.py
models/modules/: __init__.py  autoregressor.py  base.py  diffusion_llm.py  mnist.py  trdlm_muon.py  trm_ar.py  trm_diffusion.py
models/tokenizers/: __init__.py  base.py  (+2 more)
notebooks/: run_dllm.ipynb  run_network.ipynb
scripts/: test.py  train.py  train_tokenizer.py  visualize_generation.py
tests/: conftest.py
utils/: containers.py  ddp.py  ema.py  learning.py  logger.py  other.py  transform_func.py
(+48 files in other folders)
