[project]
name = "trm_sequence"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "hydra-core>=1.3.2",
  "ipykernel>=6.29.5",
  "lightning>=2.5.2",
  "matplotlib>=3.10.3",
  "pyarrow>=22.0.0",
  "pyyaml>=6.0.2",
  "requests>=2.32.5",
  "tensorboard>=2.20.0",
  "tiktoken>=0.12.0",
  "torch>=2.9.0",
  "torchaudio>=2.7.1",
  "torchvision>=0.22.1",
  "tqdm>=4.67.1",
]

[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[tool.maturin]
module-name = "rustbpe"
bindings = "pyo3"
python-source = "."
manifest-path = "rustbpe/Cargo.toml"

[dependency-groups]
dev = ["gpustat>=1.1.1", "maturin>=1.9.6", "pytest>=8.4.1"]
